--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    {
+      "Logging": {
+        "LogLevel": {
+          "Default": "Information",
+          "Microsoft.AspNetCore": "Warning"
+        }
+      },
+      "AllowedHosts": "*",
+      "Authentication": {
+        "Google": {
+          "ClientId": "1003207839443-jon3rgkis43aea2tmuddrt4o3fntp6gl.apps.googleusercontent.com",
+          "ClientSecret": "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"
+        }
+      }
     }
-  },
-  "AllowedHosts": "*"
-}
